Correct order & spacings

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -747,9 +747,13 @@ div.page-downloads {
 .mention-item {
     position: relative;
     display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 30px;
+    @media screen and (max-width: 500px) {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
 
 .mention-item-logo {
